# tmux-ease

./: .ocamlformat  README.md  dune-project  makefile  tmux_conf.opam  tmux_ease.opam  todo.md
__e2e/: tmux.conf  tmux.toml
__examples/: generate-tmux-from-json.sh  generated-tmux.conf  generated.conf  tmux.conf  tmux.json
e2e/: tmux.conf  tmux.json  tmux.toml
scripts/: install.sh  uninstall.sh
